objects/ssot__ConsumedLocationProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsumedQuantity__c</fullName>
        <label>Consumed Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountPercent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Consumed Location Product Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsConsumed__c</fullName>
        <label>Is Consumed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProductSerialized__c</fullName>
        <label>Is Product Serialized</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceAmount__c</fullName>
        <label>List Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationProductInventoryId__c</fullName>
        <label>Location Product Inventory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookEntryId__c</fullName>
        <label>Price Book Entry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubTotalPriceAmount__c</fullName>
        <label>Sub Total Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPriceAmount__c</fullName>
        <label>Total Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderId__c</fullName>
        <label>Work Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkOrderItemId__c</fullName>
        <label>Work Order Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061032573_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConsumedLocationProduct_QuantityUnit_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>ConsumedLocationProduct_QuantityUnit_rel</relationshipLabel>
        <relationshipName>rel_1705061032573_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061037215_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConsumedLocationProduct_ProductId_ma_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ConsumedLocationProduct_ProductId_ma_rel</relationshipLabel>
        <relationshipName>rel_1705061037215_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061038650_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConsumedLocationProduct_PriceBookEnt_rel</label>
        <referenceTo>ssot__PriceBookEntry__dlm</referenceTo>
        <relationshipLabel>ConsumedLocationProduct_PriceBookEnt_rel</relationshipLabel>
        <relationshipName>rel_1705061038650_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>